# ReplaceTool

./: CMakeLists.txt  readme.txt
include/: renamer.h
src/: arg_parser.cpp  file_utils.cpp  main.cpp  rename_processor.cpp  string_utils.cpp
